# Conways-Automata

./: .gitignore  CMakeLists.txt  README.md
engine/: engine.cpp  engine.h  sys_renderer.cpp  sys_renderer.h
lib_maths/: maths.h
src/: main.cpp
src/classes/: Matrix.cpp  Matrix.h  cell.cpp  cell.h
src/scenes/: scene_simulation.cpp  scene_simulation.h
